# dory-extensions

./: .gitignore  Readme.md  build-order  generate_desktop_files  makepot
.circleci/: config.yml
dory-audio-tab/: setup.py
dory-audio-tab/debian/: changelog  control  rules
dory-audio-tab/nemo-extension/: dory-audio-tab.py
dory-compare/: setup.py
dory-compare/debian/: changelog  control  copyright  dory-compare-preferences.1  install  manpages  rules
dory-compare/src/: dory-compare-preferences  dory-compare-preferences.py  dory-compare.py  utils.py
dory-dropbox/: COPYING  ChangeLog  NEWS  README  meson.build
dory-dropbox/debian/: changelog  control  copyright  dory-dropbox.lintian-overrides  dory-dropbox.postinst
dory-dropbox/src/: async-io-coroutine.h  dory-dropbox-hooks.c  dory-dropbox-hooks.h  dory-dropbox.c  dory-dropbox.h  dropbox-client-util.c  dropbox-client-util.h  dropbox-client.c  dropbox-client.h  dropbox-command-client.c  dropbox-command-client.h  dropbox.c  g-util.h  meson.build
dory-emblems/: setup.py
dory-emblems/debian/: changelog  control  install  rules
dory-emblems/dory-extension/: dory-emblems.py
dory-fileroller/: README  meson.build
dory-fileroller/debian/: changelog  control  copyright
dory-fileroller/src/: dory-fileroller.c  dory-fileroller.h  fileroller-module.c  meson.build
dory-git-tags/: setup.py
dory-git-tags/dory-extension/: dory_git_tags.py
dory-image-converter/: ChangeLog  NEWS  README  dory-image-converter.doap  meson.build
dory-image-converter/data/: meson.build
dory-image-converter/debian/: changelog  control  copyright
dory-image-converter/src/: dory-image-converter.c  dory-image-converter.h  dory-image-resizer.c  dory-image-resizer.h  dory-image-rotator.c  dory-image-rotator.h  image-converter.c  meson.build
dory-media-columns/: AUTHORS  README  dory-media-columns-prefs  dory-media-columns.py  org.dory.extensions.dory-media-columns.gschema.xml  setup.py
dory-media-columns/debian/: changelog  control  copyright  rules
dory-pastebin/: README  setup.cfg  setup.py
dory-pastebin/data/: dory-pastebin-configurator.1  dory-pastebin-configurator.ui  dory-pastebin.gschema.xml
dory-pastebin/debian/: changelog  control  copyright  dory-pastebin.manpages  rules
dory-pastebin/src/: dory-pastebin-configurator  dory-pastebin-configurator.py  dory-pastebin.py
dory-preview/: COPYING  README  TODO  meson.build
dory-preview/data/: meson.build  org.dory.Preview.service.in
dory-preview/debian/: changelog  control
dory-preview/src/: dory-preview.in  main.c  meson.build  org.dory.Preview.gresource.xml
dory-preview/src/js/ui/: application.js  fallbackRenderer.js  main.js  mainWindow.js  mimeHandler.js  spinnerBox.js  tweener.js  utils.js
dory-preview/src/js/util/: constants.js  path.js.in  totemMimeTypes.js
dory-preview/src/js/viewers/: audio.js  font.js  gst.js  html.js  image.js  text.js  xreader.js
dory-preview/src/libdory-preview/: dory-preview-cover-art.c  dory-preview-cover-art.h  dory-preview-enum-types.c.in  dory-preview-enum-types.h.in  dory-preview-file-loader.c  dory-preview-file-loader.h  dory-preview-font-loader.c  dory-preview-font-loader.h  dory-preview-font-widget.c  dory-preview-font-widget.h  dory-preview-pdf-loader.c  dory-preview-pdf-loader.h  dory-preview-sound-player.c  dory-preview-sound-player.h  dory-preview-text-loader.c  dory-preview-text-loader.h  dory-preview-utils.c  dory-preview-utils.h  meson.build
dory-preview/src/resources/: gtk-style.css
dory-python/: AUTHORS  ChangeLog  README  dory-python.pc.in  meson.build
dory-python/debian/: README.Debian  changelog  control  copyright  python-dory.install  rules
dory-python/docs/reference/: dory-python-class-reference.xml  dory-python-column-provider.xml  dory-python-column.xml  dory-python-enum-reference.xml  dory-python-file-info.xml  dory-python-info-provider.xml  dory-python-location-widget-provider.xml  dory-python-menu-item.xml  dory-python-menu-provider.xml  dory-python-menu.xml  dory-python-operation-result.xml  dory-python-overview-example.xml  dory-python-overview-methods.xml  dory-python-overview.xml  dory-python-property-page-provider.xml  dory-python-property-page.xml  dory-python-provider-reference.xml  dory-python-ref.xml  meson.build
dory-python/examples/: README  background-image.py  block-size-column.py  location-widget-provider.py  md5sum-property-page.py  open-terminal.py  submenu.py  update-file-info-async.py
dory-python/src/: dory-python-object.c  dory-python-object.h  dory-python.c  dory-python.h  meson.build
dory-repairer/: NEWS  README  meson.build
dory-repairer/debian/: changelog  control
dory-repairer/src/: dory-filename-repairer.c  dory-filename-repairer.h  encoding-dialog.c  encoding-dialog.h  filename-repairer.c  meson.build  repair-dialog.c  repair-dialog.h  repair-dialog.ui  repairer.c
dory-seahorse/: ChangeLog  NEWS  README  THANKS  meson.build
dory-seahorse/data/: dory-seahorse-decrypt.dory_action  dory-seahorse-encrypt.dory_action  dory-seahorse-import.dory_action  dory-seahorse-sign.dory_action  dory-seahorse-tool.1  dory-seahorse-verify.dory_action  meson.build  org.dory.plugins.seahorse.gschema.xml  org.dory.plugins.seahorse.window.gschema.xml
dory-seahorse/debian/: changelog  control  copyright  dory-seahorse.lintian-overrides
dory-seahorse/tool/: dory-seahorse-tool  meson.build  seahorse-tool.c  seahorse-widget.c
dory-share/: ChangeLog  meson.build
dory-share/debian/: README.Debian  changelog  control  copyright
dory-share/interfaces/: share-dialog.ui
dory-share/src/: dory-share.c  dory-share.h  meson.build  org.dory.share.samba_install.policy.in  shares.c
dory-terminal/: AUTHORS  README  setup.py
dory-terminal/debian/: changelog  control  copyright  rules
dory-terminal/src/: dory-terminal-prefs  dory-terminal-prefs.py  dory_terminal.py  org.dory.extensions.dory-terminal.gschema.xml
