install_data(
    'org.dory.plugins.seahorse.gschema.xml',
    'org.dory.plugins.seahorse.window.gschema.xml',
    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

install_data(
    'dory-seahorse-encrypt.dory_action',
    'dory-seahorse-sign.dory_action',
    'dory-seahorse-decrypt.dory_action',
    'dory-seahorse-verify.dory_action',
    'dory-seahorse-import.dory_action',
    install_dir: get_option('datadir') / 'dory' / 'actions',
)

install_man('dory-seahorse-tool.1')
